Fixed width of terminate button wrapper so it doesn't wrap text.

--- a/app/static/css/settings.less
+++ b/app/static/css/settings.less
@@ -231,7 +231,7 @@
           margin-top: 12px;
           
           &.terminate-wrapper {
-            width: 120px;
+            width: 130px;
           }
         }
       }
